[package]
name = "etha_model_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etha_model_generator_macros = {path = "proc_macros"}
convert_case = "0.6.0"
terminus-vault={git = "https://github.com/shady831213/terminus_vault"}